# Mafs

./: .gitignore  CMakeLists.txt  README.md
Mafs/: CMakeLists.txt  Mafs.cpp
Mafs/include/binds/: opengl.hpp
Mafs/include/binds/GL/: glad.h
Mafs/include/mafs/: matrix.hpp  vec.hpp
Mafs/tests/: vec_test.cpp
include/mafs/: matrix.hpp  vector.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_vector.cpp
